--- a/login.html
+++ b/login.html
@@ -13,11 +13,10 @@
 <body>
     <div class="container">
         <img src="./svg/netflix.svg">
-        <div class="container-container">
+        <main class="container-container">
             <h1>Iniciar Sesión</h1>
             <form action="#">
-                <input type="text" id="input-text" name="text" placeholder="Correo Electrónico o número de teléfono"
-                    required>
+                <input type="text" id="input-text" name="text" placeholder="Correo Electrónico o número de teléfono" required>
                 <input type="password" id="input-pass" name="password" placeholder="Contraseña" required>
                 <input type="submit" value="Iniciar Sesión" id="submit">
                 <input type="checkbox" name="checkbox" id="checkbox">
@@ -27,8 +26,8 @@
             <span class="item1-container">¿Todavia sin Netflix? <a href="index.html">Sucríbete ya</a></span>
             <span class="item2-container">Esta página utiliza Google reCAPTCHA para garantizar que no eres un robot.<a
                     href="#">Más Información</a></span>
-        </div>
-        <div class="footer-container">
+        </main>
+        <footer class="footer-container">
             <span class="item3 footer">¿Preguntas? Llama al 900 822 376</span>
             <ul class="list-footer1">
                 <li>Preguntas Frecuentes</li>
@@ -41,11 +40,11 @@
                 <li>Información Corporativa</li>
             </ul>
             <select name="idioma" id="idioma" value="español">
-                
+
                 <option value="español">Español</option>
                 <option value="ingles">Ingles</option>
             </select>
-        </div>
+        </footer>
     </div>
 </body>
 
