--- a/index.html
+++ b/index.html
@@ -11,32 +11,25 @@
 
 <body>
     <div class="container">
-        <div class="netflix-head">
-            <div class="netflix-head-head">
-                <h1>Netflix</h1>
-                <select name="idioma" id="idioma" value="español">
-                        <option value="español">Español</option>
-                        <option value="ingles">Ingles</option>
+        <main class="netflix">
+             <h1>Netflix</h1>
+            <article class="netflix-head"> 
+                <select name="idioma" class="idioma" value="español">
+                    <option value="español">Español</option>
+                    <option value="ingles">Ingles</option>
                 </select>
-                <button><a href="./login.html" class="login">Iniciar sesión</a></button>
-            </div>
-            <div class="netflix-head-main">
+                <button class="login"><a href="./login.html">Iniciar sesión</a></button>
+            </article>
+            <article class="netflix-main">
                 <p>Todas las peliculas y series que desees y muchos más.</p>
-                <p>Disfruta donde quieras,cancela cuando quieras.</p>
+                <p>Disfruta donde quieras.Cancela cuando quieras.</p>
                 <p>¿Quieres ver algo ya? Escibre tu correo para crear una suscripcion a Netflix o reactivarla</p>
-                <form action="#">
+                <form action="#" class="form">
                     <input type="email" name="email" id="email" required placeholder="Correo Electronico">
-                    <button><a href="#" id="enviar">Empezar ></a></button>
+                    <a href="#" id="enviar">Empezar </a>
                 </form>
-
-            </div>
-        </div>
-        <div class="article-1"> </div>
-        <div class="article-2"></div>
-        <div class="article-3"></div>
-        <div class="article-4"></div>
-        <div class="article-option"></div>
-        <div class="netflix-footer"></div>
+            </article>
+        </main>
     </div>
 </body>
 
