--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <main class="container-container">
             <h1>Iniciar Sesión</h1>
             <form action="#">
-                <input type="text" id="input-text" name="text" placeholder="Correo Electrónico o número de teléfono" required>
+                <input type="email" id="input-text" name="text" placeholder="Correo Electrónico o número de teléfono" required>
                 <input type="password" id="input-pass" name="password" placeholder="Contraseña" required>
                 <input type="submit" value="Iniciar Sesión" id="submit">
                 <input type="checkbox" name="checkbox" id="checkbox">
